src/objects/Timesheet_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Displayfields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Displayfields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <label>Effort (in hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fri__c</fullName>
        <label>Fri</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident #</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>Timesheet Entries</relationshipLabel>
        <relationshipName>Timesheet_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mon__c</fullName>
        <label>Mon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>MONTH( Week_Start_Date__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Activity__c</fullName>
        <label>Other Activity</label>
        <picklist>
            <picklistValues>
                <fullName>System Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troubleshooting &amp; Fixing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviews &amp; feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meetings &amp; discussions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Env set up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reading documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra Curricular Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sat__c</fullName>
        <label>Sat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sun__c</fullName>
        <label>Sun</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tasks_Other__c</fullName>
        <label>Tasks Other</label>
        <picklist>
            <picklistValues>
                <fullName>System Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troubleshooting &amp; Fixing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviews &amp; feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meetings &amp; discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Env set up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reading documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra Curricular Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tasks_for_Incident__c</fullName>
        <label>Tasks</label>
        <picklist>
            <picklistValues>
                <fullName>Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review &amp; Peer Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thu__c</fullName>
        <label>Thu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tue__c</fullName>
        <label>Tue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wed__c</fullName>
        <label>Wed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_Start_Date__c</fullName>
        <label>Week Start Date</label>
        <type>Date</type>
    </fields>
    <label>Timesheet Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Incident__c</columns>
        <columns>Mon__c</columns>
        <columns>Tue__c</columns>
        <columns>Wed__c</columns>
        <columns>Thu__c</columns>
        <columns>Fri__c</columns>
        <columns>Sat__c</columns>
        <columns>Sun__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TE-{0000000}</displayFormat>
        <label>Timesheet Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Efforts_cannot_be_more_than_24_fri</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Fri__c &gt; 24, TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Fri__c</errorDisplayField>
        <errorMessage>Efforts cannot be more than 24 hours</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Efforts_cannot_be_more_than_24_mon</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Mon__c &gt; 24, TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Mon__c</errorDisplayField>
        <errorMessage>Efforts cannot be more than 24 hours</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Efforts_cannot_be_more_than_24_sat</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Sat__c &gt; 24, TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Sat__c</errorDisplayField>
        <errorMessage>Efforts cannot be more than 24 hours</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Efforts_cannot_be_more_than_24_sun</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Sun__c &gt; 24, TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Sun__c</errorDisplayField>
        <errorMessage>Efforts cannot be more than 24 hours</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Efforts_cannot_be_more_than_24_thu</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Thu__c &gt; 24, TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Thu__c</errorDisplayField>
        <errorMessage>Efforts cannot be more than 24 hours</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Efforts_cannot_be_more_than_24_tue</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Tue__c &gt; 24, TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Tue__c</errorDisplayField>
        <errorMessage>Efforts cannot be more than 24 hours</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Efforts_cannot_be_more_than_24_wed</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Wed__c &gt; 24, TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Wed__c</errorDisplayField>
        <errorMessage>Efforts cannot be more than 24 hours</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Efforts_cannot_be_negative_fri</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Fri__c &lt; 0, TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Fri__c</errorDisplayField>
        <errorMessage>Effort cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Efforts_cannot_be_negative_mon</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Mon__c &lt; 0, TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Mon__c</errorDisplayField>
        <errorMessage>Effort cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Efforts_cannot_be_negative_sat</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Sat__c &lt; 0, TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Sat__c</errorDisplayField>
        <errorMessage>Effort cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Efforts_cannot_be_negative_sun</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Sun__c &lt; 0, TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Sun__c</errorDisplayField>
        <errorMessage>Effort cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Efforts_cannot_be_negative_thu</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Thu__c &lt; 0, TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Thu__c</errorDisplayField>
        <errorMessage>Effort cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Efforts_cannot_be_negative_tue</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Tue__c &lt; 0, TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Tue__c</errorDisplayField>
        <errorMessage>Effort cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Efforts_cannot_be_negative_wed</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Wed__c &lt; 0, TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Wed__c</errorDisplayField>
        <errorMessage>Effort cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Update_to_Incident_Effort</fullName>
        <active>false</active>
        <errorConditionFormula>OR( ISCHANGED( Incident__c ) , ISCHANGED( Tasks_for_Incident__c ))</errorConditionFormula>
        <errorDisplayField>Incident__c</errorDisplayField>
        <errorMessage>Sorry, but you cannot modify the Task. Please enter 0 Effort and Add another row if you want to delete this entry.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_update_to_Other_Effort</fullName>
        <active>false</active>
        <errorConditionFormula>OR( ISCHANGED( Tasks_Other__c ) , ISCHANGED( Comments__c ))</errorConditionFormula>
        <errorDisplayField>Tasks_Other__c</errorDisplayField>
        <errorMessage>Sorry, but you cannot modify the Task. Please enter 0 Effort and Add Another Row if you want to delete this entry.</errorMessage>
    </validationRules>
</CustomObject>